# Renderer

./: CMakeLists.txt  README.md
renderer/: CMakeLists.txt
renderer-demo/: CMakeLists.txt
renderer-demo-rasterizer/: CMakeLists.txt
renderer-demo-rasterizer/Shaders/: shader.vert
renderer-demo-rasterizer/Shaders/Raster/: frag.spv  vert.spv
renderer-demo-rasterizer/media/scenes/: cs_office.mtl
renderer-demo-rasterizer/src/: main.cpp
renderer-demo/Shaders/: frag.spv  shader.frag  shader.vert  vert.spv
renderer-demo/Shaders/PP/Tint/: frag.spv  shader.frag  shader.vert  vert.spv
renderer-demo/Shaders/PP/Tint2/: frag.spv  shader.frag  shader.vert  vert.spv
renderer-demo/Shaders/Raster/: shader.vert  vert.spv
renderer-demo/Shaders/Raytrace/: closesthit.rchit  raygen.rgen  rmiss.spv
renderer-demo/Shaders/Raytrace/Compleate/Hitgroups/: closesthit.rchit  rchit.spv
renderer-demo/Shaders/Raytrace/Hitgroups/0/: closesthit.rchit  rchit.spv
renderer-demo/Shaders/Raytrace/Hitgroups/Textured/: rchit.spv
renderer-demo/Shaders/Raytrace/Old/Hitgroups/Textured/: closesthit.rchit
renderer-demo/Shaders/Raytrace/PBR/Hitgroups/: closesthit.rchit  rchit.spv
renderer-demo/Shaders/Raytrace/Reflective/Hitgroups/0/: closesthit.rchit  rchit.spv
renderer-demo/Shaders/Raytrace/Reflective/Hitgroups/1/: closesthit.rchit  rchit.spv
renderer-demo/Shaders/Raytrace/Reflective/Miss/: miss.rmiss  rmiss.spv
renderer-demo/Shaders/Raytrace/Revolution/Hitgroups/: closesthit.rchit  rchit.spv
renderer-demo/Shaders/Raytrace/Revolution/Miss/: miss.rmiss  rmiss.spv
renderer-demo/Shaders/Raytrace/Revolution2/Hitgroups/: closesthit.rchit  rchit.spv
renderer-demo/media/scenes/: Medieval_building.mtl  sphere.mtl
renderer-demo/media/scenes/CubePBR/: cube.mtl
renderer-demo/media/scenes/SpherePBR/: sphere.mtl
renderer-demo/src/: main.cpp  obj_loader.h
renderer/include/: IRenderer.hpp
renderer/include/renderer/: APIs.hpp  DataFormat.hpp  DescriptorType.hpp  IBuffer.hpp  IBufferDescriptor.hpp  IBufferPool.hpp  IComputePipeline.hpp  IComputeProgram.hpp  IDescriptor.hpp  IDescriptorPool.hpp  IDescriptorSet.hpp  IGraphicsPipeline.hpp  IIndexBuffer.hpp  IModel.hpp  IModelPool.hpp  IPipeline.hpp  IRenderer.hpp  ITextureBuffer.hpp  IUniformBuffer.hpp  IVertexBuffer.hpp  NativeWindowHandle.hpp  ShaderStage.hpp  Status.hpp  VertexBase.hpp  VertexBinding.hpp  VertexInputRate.hpp
renderer/include/renderer/gl3/: OpenGL3Renderer.hpp
renderer/include/renderer/vulkan/: VulkanAcceleration.hpp  VulkanBuffer.hpp  VulkanBufferData.hpp  VulkanBufferDescriptor.hpp  VulkanBufferPool.hpp  VulkanCommon.hpp  VulkanComputePipeline.hpp  VulkanComputeProgram.hpp  VulkanDescriptor.hpp  VulkanDescriptorPool.hpp  VulkanDescriptorSet.hpp  VulkanDevice.hpp  VulkanFlags.hpp  VulkanGraphicsPipeline.hpp  VulkanIndexBuffer.hpp  VulkanInitializers.hpp  VulkanInstance.hpp  VulkanModel.hpp  VulkanModelPool.hpp  VulkanPhysicalDevice.hpp  VulkanPipeline.hpp  VulkanQueueFamilyIndices.hpp  VulkanRaytracePipeline.hpp  VulkanRenderPass.hpp  VulkanRenderer.hpp  VulkanShaderBindingTable.hpp  VulkanStatus.hpp  VulkanSwapChainSupport.hpp  VulkanSwapchain.hpp  VulkanTextureBuffer.hpp  VulkanUniformBuffer.hpp  VulkanVertexBuffer.hpp
renderer/src/renderer/: IBuffer.cpp  IBufferDescriptor.cpp  IBufferPool.cpp  IComputePipeline.cpp  IComputeProgram.cpp  IDescriptor.cpp  IDescriptorPool.cpp  IDescriptorSet.cpp  IGraphicsPipeline.cpp  IIndexBuffer.cpp  IModel.cpp  IModelPool.cpp  IPipeline.cpp  IRenderer.cpp  IUniformBuffer.cpp  VertexBase.cpp
renderer/src/renderer/gl3/: OpenGL3Renderer.cpp
renderer/src/renderer/vulkan/: VulkanAcceleration.cpp  VulkanBuffer.cpp  VulkanBufferDescriptor.cpp  VulkanBufferPool.cpp  VulkanCommon.cpp  VulkanComputePipeline.cpp  VulkanComputeProgram.cpp  VulkanDescriptor.cpp  VulkanDescriptorPool.cpp  VulkanDescriptorSet.cpp  VulkanDevice.cpp  VulkanGraphicsPipeline.cpp  VulkanIndexBuffer.cpp  VulkanInitializers.cpp  VulkanInstance.cpp  VulkanModel.cpp  VulkanModelPool.cpp  VulkanPhysicalDevice.cpp  VulkanPipeline.cpp  VulkanRaytracePipeline.cpp  VulkanRenderPass.cpp  VulkanRenderer.cpp  VulkanSwapchain.cpp  VulkanTextureBuffer.cpp  VulkanUniformBuffer.cpp  VulkanVertexBuffer.cpp
